--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>MatchWork — Conectando talentos e empresas</title>
-<meta name="description" content="MatchWork conecta candidatos e empresas com matching rápido (like/dislike), trilhas de capacitação, apoio emocional (Bem+) e gamificação (Pontos Match) para contratar melhor e reter por mais tempo.">
+<meta name="description" content="MatchWork conecta candidatos e empresas com matching like/dislike, trilhas de capacitação, apoio emocional (Bem+) e gamificação (MatchPoints) para contratar melhor e reter por mais tempo.">
 <link rel="icon" href="assets/logo-purple.PNG" type="image/png">
 <meta name="theme-color" content="#6f3aff">
 <style>
 :root{
-  --bg:#ffffff; --ink:#0f1222; --muted:#636985; --line:#e8e8ef;
+  --bg:#ffffff; --ink:#101225; --muted:#636985; --line:#e8e8ef;
   --brand:#6f3aff; --brand-2:#8c66ff; --paper:#f8f7ff;
   --logoH: clamp(64px, 10vw, 96px);
 }
@@ -43,11 +43,11 @@ a:focus,button:focus,input:focus,select:focus,textarea:focus{outline:2px solid v
 .hero{padding:78px 0 40px;background:
   radial-gradient(900px 300px at 50% -120px, rgba(111,58,255,.12), transparent 60%),#fff}
 .hero-grid{display:grid;grid-template-columns:1.05fr 1fr;gap:32px;align-items:center}
-h1{font-size:clamp(28px, 6vw, 56px);line-height:1.06;letter-spacing:-.4px;margin:0 0 12px}
+h1{font-size:clamp(28px, 6vw, 54px);line-height:1.06;letter-spacing:-.4px;margin:0 0 12px}
 .lead{font-size:18px;color:var(--muted);max-width:720px;margin:0 0 20px}
 .badge{display:inline-block;padding:6px 10px;border-radius:999px;font-size:12px;font-weight:800;background:#efeaff;color:#3f21ba;border:1px solid #e1d8ff}
 
-/* PHONE MOCKUP (somente like/dislike) */
+/* PHONE MOCKUP (like/dislike + deslize) */
 .phone{width:100%;max-width:360px;margin:0 auto;border:1px solid #ddd;border-radius:28px;background:#fff;box-shadow:0 20px 60px rgba(24,27,51,.10);padding:14px 12px 16px;position:relative}
 .phone-notch{position:absolute;top:8px;left:50%;transform:translateX(-50%);width:120px;height:10px;border-radius:8px;background:#111}
 .phone-screen{border:1px solid var(--line);border-radius:20px;padding:16px;background:#fff}
@@ -58,11 +58,12 @@ h1{font-size:clamp(28px, 6vw, 56px);line-height:1.06;letter-spacing:-.4px;margin
 .card-lines div:nth-child(2){width:50%}
 .card-lines div:nth-child(3){width:40%}
 .actions{display:flex;justify-content:space-between;align-items:center;margin-top:14px}
-.btn-like,.btn-dislike{display:flex;align-items:center;justify-content:center;width:64px;height:64px;border-radius:999px;border:2px solid #e9e6ff;background:#fff;cursor:pointer;transition:.15s;box-shadow:0 4px 14px rgba(0,0,0,.05)}
-.btn-like:hover{border-color:#cfc4ff;transform:translateY(-1px)}
-.btn-dislike:hover{border-color:#f1e0ff;transform:translateY(-1px)}
-.btn-like svg{stroke:#34c759}
-.btn-dislike svg{stroke:#ff3b30}
+.iconbtn{display:flex;align-items:center;justify-content:center;width:64px;height:64px;border-radius:999px;border:2px solid #e9e6ff;background:#fff;cursor:pointer;transition:.15s;box-shadow:0 4px 14px rgba(0,0,0,.05)}
+.iconbtn:hover{transform:translateY(-1px)}
+.icon-like svg{stroke:#34c759}
+.icon-dislike svg{stroke:#ff3b30}
+.swipe-hint{display:flex;align-items:center;justify-content:center;gap:6px;color:#8589a3;font-size:12px;margin-top:10px}
+.swipe-hint svg{stroke:#8589a3}
 
 /* SECTIONS */
 .band{background:var(--paper);border-top:1px solid var(--line);border-bottom:1px solid var(--line)}
@@ -120,17 +121,14 @@ h1{font-size:clamp(28px, 6vw, 56px);line-height:1.06;letter-spacing:-.4px;margin
   <div class="topbar">
     <div class="container inner">
       <a class="brand" href="#" aria-label="MatchWork">
-        <!-- Usa a versão ROXA. O nome precisa coincidir com o arquivo no repo (PNG maiúsculo). -->
         <img src="assets/logo-purple.PNG" alt="Logo MatchWork" loading="lazy" decoding="async">
       </a>
-
       <div class="navwrap">
         <button class="menu-toggle" aria-label="Abrir menu" aria-expanded="false">
           <svg width="22" height="22" viewBox="0 0 24 24" fill="none">
             <path d="M3 6h18M3 12h18M3 18h18" stroke="#3b3b3b" stroke-width="2" stroke-linecap="round"/>
           </svg>
         </button>
-
         <nav class="nav-links" aria-label="principal">
           <a href="#como-funciona">Como funciona</a>
           <a href="#funcionalidades">Funcionalidades</a>
@@ -146,11 +144,11 @@ h1{font-size:clamp(28px, 6vw, 56px);line-height:1.06;letter-spacing:-.4px;margin
   <header class="hero">
     <div class="container hero-grid">
       <div>
-        <span class="badge">Empregos • Capacitação • Bem+ • Pontos</span>
-        <h1>Encontre pessoas prontas para trabalhar.<br>Conquiste vagas que combinam com você.</h1>
+        <span class="badge">Empregos • Capacitação • Bem+ • MatchPoints</span>
+        <h1>Contrate rápido. Reter melhor.</h1>
         <p class="lead">
-          O <b>MatchWork</b> une <b>matching</b> tipo like/dislike, <b>trilhas de capacitação</b> e <b>apoio emocional (Bem+)</b>.
-          Com <b>gamificação (Pontos Match)</b>, aumentamos a contratação e a retenção — sem complicação.
+          Para empresas: publique vagas, receba candidatos compatíveis e acompanhe métricas. <br>
+          Para candidatos: encontre vagas que combinam com você, aprenda e tenha apoio do <b>Bem+</b>.
         </p>
         <div style="display:flex;gap:10px;flex-wrap:wrap">
           <a class="btn primary" href="#planos">Ver planos</a>
@@ -158,7 +156,7 @@ h1{font-size:clamp(28px, 6vw, 56px);line-height:1.06;letter-spacing:-.4px;margin
         </div>
       </div>
 
-      <!-- MOCKUP (like/dislike) -->
+      <!-- MOCKUP (like/dislike + deslize) -->
       <div class="phone" aria-label="Demonstração do fluxo de like/dislike">
         <div class="phone-notch"></div>
         <div class="phone-screen">
@@ -170,20 +168,21 @@ h1{font-size:clamp(28px, 6vw, 56px);line-height:1.06;letter-spacing:-.4px;margin
               </div>
             </div>
             <div class="actions">
-              <button class="btn-dislike" aria-label="Dislike">
+              <button class="iconbtn icon-dislike" aria-label="Não combinar (dislike)" title="Não combinar">
                 <svg width="28" height="28" viewBox="0 0 24 24" fill="none" stroke-width="2">
-                  <path d="M10 15V5a3 3 0 0 1 3-3h1a2 2 0 0 1 2 2v1h3a2 2 0 0 1 2 2v2a2 2 0 0 1-2 2h-3l-2 6a3 3 0 0 1-2.83 2H9.5a1.5 1.5 0 0 1-1.5-1.5V15h2z"/>
+                  <path d="M6 12h8l-2 7a3 3 0 0 1-2.9 2H7a2 2 0 0 1-2-2v-7zM14 12V5a2 2 0 0 1 2-2h1a3 3 0 0 1 3 3v6h-6z"/>
                 </svg>
               </button>
-              <button class="btn-like" aria-label="Like">
+              <button class="iconbtn icon-like" aria-label="Combinar (like)" title="Combinar">
                 <svg width="28" height="28" viewBox="0 0 24 24" fill="none" stroke-width="2">
-                  <path d="M14 9V3a3 3 0 0 0-3-3h-1a2 2 0 0 0-2 2v1H5a2 2 0 0 0-2 2v2a2 2 0 0 0 2 2h3l2 6a3 3 0 0 0 2.83 2H14.5A1.5 1.5 0 0 0 16 15.5V9h-2z"/>
+                  <path d="M18 12H10l2-7a3 3 0 0 1 2.9-2H17a2 2 0 0 1 2 2v7zM10 12v7a2 2 0 0 1-2 2H7a3 3 0 0 1-3-3v-6h6z"/>
                 </svg>
               </button>
             </div>
           </div>
-          <div style="text-align:center;color:#888;font-size:12px;margin-top:10px">
-            Arraste para o lado ou toque em <b>like</b>/<b>dislike</b>
+          <div class="swipe-hint">
+            <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke-width="2"><path d="M8 12h8M14 8l4 4-4 4"/></svg>
+            Deslize para o lado ou toque em <b>like</b>/<b>dislike</b>
           </div>
         </div>
       </div>
@@ -195,7 +194,7 @@ h1{font-size:clamp(28px, 6vw, 56px);line-height:1.06;letter-spacing:-.4px;margin
     <div class="container">
       <div class="metrics">
         <div class="metric"><b>3 pilares</b><span>Matching • Capacitação • Bem+</span></div>
-        <div class="metric"><b>Pontos Match</b><span>Gamificação para engajar</span></div>
+        <div class="metric"><b>MatchPoints</b><span>Gamificação para engajar</span></div>
         <div class="metric"><b>Relatórios</b><span>Indicadores de inclusão</span></div>
       </div>
     </div>
@@ -205,11 +204,11 @@ h1{font-size:clamp(28px, 6vw, 56px);line-height:1.06;letter-spacing:-.4px;margin
   <section id="como-funciona" class="section">
     <div class="container">
       <h2>Como funciona</h2>
-      <p class="sub">Fluxo simples para candidatos e empresas, com foco em velocidade na contratação e base para retenção.</p>
+      <p class="sub">Fluxo direto, pensado para velocidade na contratação e base para retenção.</p>
       <div class="grid-3">
-        <div class="card"><h3>1. Cadastro</h3><p>Candidatos fazem testes vocacionais/comportamentais; empresas publicam vagas em minutos.</p></div>
-        <div class="card"><h3>2. Matching</h3><p>Like/dislike dos dois lados + recomendações por compatibilidade e competências.</p></div>
-        <div class="card"><h3>3. Evolução</h3><p>Trilhas de capacitação e <b>Bem+</b> para reduzir abandono e aumentar performance.</p></div>
+        <div class="card"><h3>1) Cadastro</h3><p>Candidatos fazem testes vocacionais/comportamentais; empresas publicam vagas em minutos.</p></div>
+        <div class="card"><h3>2) Matching</h3><p>Like/dislike dos dois lados + recomendações por compatibilidade e competências.</p></div>
+        <div class="card"><h3>3) Evolução</h3><p>Trilhas de capacitação e <b>Bem+</b> para reduzir abandono e elevar performance.</p></div>
       </div>
     </div>
   </section>
@@ -220,19 +219,19 @@ h1{font-size:clamp(28px, 6vw, 56px);line-height:1.06;letter-spacing:-.4px;margin
       <h2>Funcionalidades</h2>
       <p class="sub">O essencial para contratar mais rápido, formar melhor e reter por mais tempo.</p>
       <div class="grid-2">
-        <div class="card"><h3>Banco de Talentos</h3><p>Busca ágil, matching inteligente e candidatos qualificados.</p></div>
+        <div class="card"><h3>Banco de Talentos</h3><p>Busca ágil, matching inteligente e lista de candidatos qualificados.</p></div>
         <div class="card"><h3>Capacitação</h3><p>Trilhas de aprendizagem e cursos parceiros por cargo/competência.</p></div>
-        <div class="card"><h3>Bem+</h3><p>Apoio emocional, conteúdos e grupos para melhorar retenção e engajamento.</p></div>
-        <div class="card"><h3>Relatórios</h3><p>Indicadores de empregabilidade e inclusão (recortes por público) para decisões.</p></div>
+        <div class="card"><h3>Bem+</h3><p>Apoio emocional, conteúdos e grupos para engajamento e retenção.</p></div>
+        <div class="card"><h3>Relatórios</h3><p>Indicadores de empregabilidade e inclusão (por recortes) para decisões.</p></div>
       </div>
-      <p class="sub" style="margin-top:8px"><em>Parcerias sob demanda:</em> palestras, mentorias e consultoria para empresas (terceirizado).</p>
+      <p class="sub" style="margin-top:8px"><em>Serviços sob demanda:</em> palestras, mentorias e consultoria para empresas (terceirizado).</p>
     </div>
   </section>
 
   <!-- GAMIFICAÇÃO -->
   <section id="gamificacao" class="section">
     <div class="container">
-      <h2>Gamificação & Recompensas (Pontos Match)</h2>
+      <h2>Gamificação — <span style="color:#6f3aff">MatchPoints</span></h2>
       <p class="sub">Sistema simples de pontos para incentivar progresso contínuo dos candidatos.</p>
       <div class="grid-2">
         <div class="card">
@@ -246,16 +245,15 @@ h1{font-size:clamp(28px, 6vw, 56px);line-height:1.06;letter-spacing:-.4px;margin
           </ul>
         </div>
         <div class="card">
-          <h3>Como resgatar</h3>
+          <h3>Como usar</h3>
           <ul style="margin:0;padding-left:18px">
-            <li>Benefícios no app (destaque/prioridade)</li>
-            <li>Cursos parceiros e microcertificações</li>
-            <li>Vouchers/benefícios com parceiros <small>(em evolução)</small></li>
-            <li>Conteúdos Bem+ e sessões em grupo</li>
+            <li>Destaque/prioridade no app</li>
+            <li>Acesso a cursos/microcertificações parceiros</li>
+            <li>Conteúdos e sessões do Bem+</li>
+            <li>Vouchers/benefícios de parceiros <small>(em evolução)</small></li>
           </ul>
         </div>
       </div>
-      <p class="sub" style="margin-top:8px"><em>Observação:</em> catálogo de resgates cresce com novas parcerias ao longo do tempo.</p>
     </div>
   </section>
 
@@ -263,22 +261,22 @@ h1{font-size:clamp(28px, 6vw, 56px);line-height:1.06;letter-spacing:-.4px;margin
   <section id="planos" class="band section">
     <div class="container">
       <h2>Nossos Planos</h2>
-      <p class="sub">Escolha o formato ideal para começar rápido.</p>
+      <p class="sub">Escolha o formato ideal para começar agora.</p>
       <div class="pricing">
 
         <div class="price-card">
-          <h3>PMEs — Assinatura Mensal</h3>
+          <h3>PMEs — Mensal</h3>
           <div class="price"><span class="amount">R$150</span><span class="small">/mês</span></div>
           <div class="li">Publicações ilimitadas</div>
-          <div class="li">Banco de talentos</div>
+          <div class="li">Acesso ao banco de talentos</div>
           <div class="li">Networking empresarial</div>
-          <a class="btn primary" href="#contato" style="margin-top:8px">Assinar</a>
+          <a class="btn primary" href="#contato" style="margin-top:8px">Assinar mensal</a>
         </div>
 
         <div class="price-card">
-          <h3>PMEs — Assinatura Anual</h3>
+          <h3>PMEs — Anual</h3>
           <div class="price"><span class="amount">R$1.500</span><span class="small">/ano</span></div>
-          <div class="li">12 meses com desconto</div>
+          <div class="li">Economia de 2 meses</div>
           <div class="li">Publicações ilimitadas</div>
           <div class="li">Suporte prioritário</div>
           <a class="btn primary" href="#contato" style="margin-top:8px">Assinar anual</a>
@@ -298,8 +296,7 @@ h1{font-size:clamp(28px, 6vw, 56px);line-height:1.06;letter-spacing:-.4px;margin
           <div class="price"><span class="amount">R$14,90</span><span class="small">/mês</span></div>
           <div class="li">Destaque no banco</div>
           <div class="li">Relatório de carreira</div>
-          <div class="li">Acesso ao Bem+</div>
-          <div class="li">Trilhas e feedback contínuo</div>
+          <div class="li">Acesso ao Bem+ e trilhas</div>
           <a class="btn primary" href="#contato" style="margin-top:8px">Ser Premium</a>
         </div>
 
@@ -312,7 +309,9 @@ h1{font-size:clamp(28px, 6vw, 56px);line-height:1.06;letter-spacing:-.4px;margin
     <div class="container">
       <h2 style="text-align:center">Fale com a gente</h2>
       <p class="sub">Quer pilotar o MatchWork ou tirar uma dúvida? Envie sua mensagem.</p>
-      <form action="https://formspree.io/f/mayvlqkp" method="POST" class="form" aria-label="Formulário de contato">
+
+      <!-- Envia para seu e-mail via FormSubmit -->
+      <form action="https://formsubmit.co/rodrigovolpatob@gmail.com" method="POST" class="form" aria-label="Formulário de contato">
         <input class="input" name="nome" placeholder="Seu nome" required aria-label="Seu nome">
         <input class="input" type="email" name="email" placeholder="E-mail" required aria-label="Seu e-mail">
         <select class="input" name="perfil" required aria-label="Seu perfil">
@@ -322,9 +321,19 @@ h1{font-size:clamp(28px, 6vw, 56px);line-height:1.06;letter-spacing:-.4px;margin
           <option value="organizacao">Organização/Parceria</option>
         </select>
         <textarea class="input" name="mensagem" rows="4" placeholder="Como podemos ajudar?" required aria-label="Sua mensagem"></textarea>
-        <input type="text" name="empresa" style="display:none"><!-- honeypot -->
+
+        <!-- opções do FormSubmit -->
+        <input type="hidden" name="_subject" value="Novo contato via site MatchWork">
+        <input type="hidden" name="_template" value="box">
+        <input type="hidden" name="_captcha" value="false">
+        <input type="hidden" name="_next" value="https://rodrigovolpatob-blip.github.io/MatchWork/#contato-ok">
+        <!-- honeypot antispam -->
+        <input type="text" name="_honey" style="display:none">
+
         <button class="btn primary" type="submit" style="width:max-content">Enviar</button>
       </form>
+
+      <p id="contato-ok" class="sub" style="margin-top:12px;display:none">Obrigado! Sua mensagem foi enviada.</p>
     </div>
   </section>
 
