Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -4,9 +4,17 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>MatchWork — Encontre gente certa, rápido.</title>
-<meta name="description" content="MatchWork para PMEs: publique a vaga, receba matches compatíveis em minutos e feche mais rápido. Para candidatos: vagas que combinam com o perfil, trilhas e Bem+Match.">
+<meta name="description" content="MatchWork para PMEs: publique a vaga, receba matches compatíveis em minutos e contrate sem complicação. Para candidatos: vagas que combinam com o perfil, trilhas e Bem+Match.">
 <link rel="icon" href="assets/logo-purple.PNG" type="image/png">
 <meta name="theme-color" content="#6f3aff">
+
+<!-- Open Graph -->
+<meta property="og:type" content="website">
+<meta property="og:title" content="MatchWork — Encontre gente certa, rápido.">
+<meta property="og:description" content="PMEs publicam vagas e recebem matches compatíveis. Candidatos têm trilhas e Bem+Match. Planos simples e One-Shot.">
+<meta property="og:image" content="assets/logo-purple.PNG">
+<meta property="og:url" content="https://rodrigovolpatob-blip.github.io/MatchWork/">
+
 <style>
 :root{
   --bg:#fff; --ink:#121426; --muted:#646b86; --line:#e9e9f2;
@@ -71,9 +79,14 @@ h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin
 .input{padding:12px;border:1px solid var(--line);border-radius:10px;font-size:16px;background:#fff}
 .input::placeholder{color:#8a8a8a}
 
-/* STICKY CTA (mobile) */
+/* STICKY */
 .sticky-cta{position:fixed;left:0;right:0;bottom:0;z-index:40;background:#fff;border-top:1px solid var(--line);padding:10px 16px;display:none;gap:10px}
 .sticky-cta a{flex:1;text-align:center}
+
+/* WhatsApp Float */
+.whats{position:fixed;right:14px;bottom:96px;z-index:60;
+       background:#25D366;color:#fff;border-radius:999px;
+       padding:12px 16px;font-weight:800;box-shadow:0 8px 24px rgba(0,0,0,.2)}
 
 /* MOBILE */
 @media (max-width:980px){
@@ -116,12 +129,12 @@ h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin
     <div>
       <h1>Encontre gente certa, rápido.</h1>
       <p class="lead">
-        Para <b>PMEs</b>: publique a vaga, receba <b>matches</b> compatíveis em minutos e conduza tudo num fluxo simples.<br>
-        Para <b>candidatos</b>: vagas que combinam com seu perfil, trilhas de aprendizado e o apoio <b>Bem+Match</b>.
+        Para <b>PMEs</b>: publique a vaga, receba <b>matches compatíveis em minutos</b> e conduza tudo num fluxo simples.<br>
+        Para <b>candidatos</b>: vagas que combinam com seu perfil, trilhas de aprendizado e <b>Bem+Match</b>.
       </p>
       <div style="display:flex;gap:10px;flex-wrap:wrap">
-        <a class="btn primary" href="#planos">Ver planos</a>
-        <a class="btn ghost" href="#contato">Agendar conversa</a>
+        <a class="btn primary" href="#planos-pme">Sou PME</a>
+        <a class="btn ghost" href="#planos-candidato">Sou candidato</a>
       </div>
     </div>
   </div>
@@ -161,7 +174,7 @@ h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin
     <div class="grid-2">
       <div class="card">
         <h3>Para candidatos</h3>
-        <p>Conteúdos curtos, rotinas simples e grupos de apoio para lidar com ansiedade, foco e confiança durante a busca por trabalho.</p>
+        <p>Conteúdos curtos, rotinas e grupos para foco, confiança e adaptação durante a jornada de emprego.</p>
       </div>
       <div class="card">
         <h3>Para empresas</h3>
@@ -180,13 +193,14 @@ h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin
 
     <div class="pricing">
       <!-- PMEs -->
-      <div class="price-card">
+      <div id="planos-pme" class="price-card">
         <div class="price-title"><h3 style="margin:0">PMEs</h3></div>
         <div class="price"><span class="amount">R$150</span><span class="small">/mês</span></div>
         <p class="subprice">ou <b>R$1.500/ano</b> (ganhe 2 meses)</p>
         <div class="li">Publicações ilimitadas</div>
-        <div class="li">Acesso ao banco de talentos</div>
-        <div class="li">Indicações de perfis compatíveis</div>
+        <div class="li">Acesso ao Banco de Talentos</div>
+        <div class="li">Indicações automáticas de compatíveis</div>
+        <div class="li">Suporte por e-mail/WhatsApp</div>
         <div style="display:flex;gap:8px;margin-top:10px;flex-wrap:wrap">
           <a class="btn primary" href="#contato">Assinar mensal</a>
           <a class="btn ghost" href="#contato">Assinar anual</a>
@@ -194,7 +208,7 @@ h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin
       </div>
 
       <!-- Candidatos -->
-      <div class="price-card">
+      <div id="planos-candidato" class="price-card">
         <div class="price-title"><h3 style="margin:0">Candidatos Premium</h3></div>
         <div class="price"><span class="amount">R$14,90</span><span class="small">/mês</span></div>
         <p class="subprice">ou <b>R$149/ano</b> (2 meses de bônus)</p>
@@ -211,7 +225,7 @@ h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin
       <div class="price-card" style="grid-column:1/-1">
         <div class="price-title"><h3 style="margin:0">PMEs — One-Shot</h3></div>
         <div class="price"><span class="amount">R$400</span><span class="small">/vaga</span></div>
-        <p class="subprice">Vaga ativa até preencher (<b>máx. 3 meses</b>) + indicações de compatíveis.</p>
+        <p class="subprice">Vaga ativa até preencher (<b>máx. 3 meses</b>) + indicações automáticas de compatíveis.</p>
         <a class="btn primary" href="#contato">Publicar vaga única</a>
       </div>
     </div>
@@ -251,11 +265,16 @@ h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin
   <div class="container">© 2025 MatchWork</div>
 </footer>
 
-<!-- STICKY CTA (mobile) -->
+<!-- STICKY FOOTER CTA (mobile) -->
 <div class="sticky-cta">
   <a class="btn ghost" href="#planos">Ver planos</a>
   <a class="btn primary" href="#contato">Falar agora</a>
 </div>
+
+<!-- WhatsApp Float -->
+<a class="whats" href="https://wa.me/5547999639417?text=Quero%20conhecer%20o%20MatchWork" aria-label="Falar no WhatsApp">
+  WhatsApp
+</a>
 
 <script>
 /* menu mobile */
