--- a/index.html
+++ b/index.html
@@ -88,6 +88,14 @@ h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin
        background:#25D366;color:#fff;border-radius:999px;
        padding:12px 16px;font-weight:800;box-shadow:0 8px 24px rgba(0,0,0,.2)}
 
+/* Toast */
+#toast{
+  position:fixed;bottom:20px;left:50%;transform:translateX(-50%);
+  background:#34c759;color:#fff;padding:14px 22px;border-radius:8px;
+  font-weight:600;box-shadow:0 6px 20px rgba(0,0,0,.2);
+  display:none;z-index:999;font-size:15px;
+}
+
 /* MOBILE */
 @media (max-width:980px){
   .hero-grid{grid-template-columns:1fr}
@@ -129,8 +137,8 @@ h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin
     <div>
       <h1>Encontre gente certa, rápido.</h1>
       <p class="lead">
-        Para <b>PMEs</b>: publique a vaga, receba <b>matches compatíveis em minutos</b> e conduza tudo num fluxo simples.<br>
-        Para <b>candidatos</b>: vagas que combinam com seu perfil, trilhas de aprendizado e <b>Bem+Match</b>.
+        Para <b>PMEs</b>: publique a vaga, receba <b>matches compatíveis em minutos</b> e reduza o tempo de contratação.<br>
+        Para <b>candidatos</b>: encontre vagas que combinam com seu perfil, evolua com trilhas e tenha o apoio <b>Bem+Match</b>.
       </p>
       <div style="display:flex;gap:10px;flex-wrap:wrap">
         <a class="btn primary" href="#planos-pme">Sou PME</a>
@@ -232,6 +240,19 @@ h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin
   </div>
 </section>
 
+<!-- PROVA SOCIAL (genérica) -->
+<section class="band section">
+  <div class="container">
+    <h2>Em validação</h2>
+    <p class="sub">O MatchWork está em fase de testes com empresas e organizações da região.</p>
+    <div style="display:flex;gap:20px;flex-wrap:wrap;justify-content:center;margin-top:18px">
+      <div class="card" style="min-width:220px;text-align:center">Avaliações iniciais positivas</div>
+      <div class="card" style="min-width:220px;text-align:center">Processos em construção</div>
+      <div class="card" style="min-width:220px;text-align:center">Parcerias educacionais em exploração</div>
+    </div>
+  </div>
+</section>
+
 <!-- CONTATO -->
 <section id="contato" class="section">
   <div class="container">
@@ -276,6 +297,9 @@ h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin
   WhatsApp
 </a>
 
+<!-- Toast de confirmação -->
+<div id="toast">✅ Mensagem enviada com sucesso!</div>
+
 <script>
 /* menu mobile */
 const toggle = document.querySelector('.menu-toggle');
@@ -292,6 +316,20 @@ if(toggle && links){
     });
   });
 }
+
+/* Toast de confirmação simples após submit */
+(function(){
+  const form = document.querySelector('form[action^="https://formsubmit.co/"]');
+  const toast = document.getElementById('toast');
+  if(form && toast){
+    form.addEventListener('submit', ()=>{
+      setTimeout(()=>{
+        toast.style.display='block';
+        setTimeout(()=>toast.style.display='none', 4000);
+      }, 1000);
+    });
+  }
+})();
 </script>
 </body>
 </html>
