Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>MatchWork — Encontre gente certa, rápido.</title>
-<meta name="description" content="MatchWork para PMEs: publique a vaga, receba matches compatíveis em minutos e contrate sem complicação. Para candidatos: vagas que combinam com o perfil, trilhas e Bem+Match.">
+<meta name="description" content="MatchWork para Empresas: publique a vaga, receba matches compatíveis em minutos e contrate sem complicação. Para candidatos: vagas que combinam com o perfil, trilhas e Bem+Match.">
 <link rel="icon" href="assets/logo-purple.PNG" type="image/png">
 <meta name="theme-color" content="#6f3aff">
 
 <!-- Open Graph -->
 <meta property="og:type" content="website">
 <meta property="og:title" content="MatchWork — Encontre gente certa, rápido.">
-<meta property="og:description" content="PMEs publicam vagas e recebem matches compatíveis. Candidatos têm trilhas e Bem+Match. Planos simples e One-Shot.">
+<meta property="og:description" content="Empresas publicam vagas e recebem matches compatíveis. Candidatos têm trilhas e Bem+Match. Planos simples e One-Shot.">
 <meta property="og:image" content="assets/logo-purple.PNG">
 <meta property="og:url" content="https://rodrigovolpatob-blip.github.io/MatchWork/">
 
@@ -137,11 +137,11 @@ h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin
     <div>
       <h1>Encontre gente certa, rápido.</h1>
       <p class="lead">
-        Para <b>PMEs</b>: publique a vaga, receba <b>matches compatíveis em minutos</b> e reduza o tempo de contratação.<br>
+        Para <b>Empresas</b>: publique a vaga, receba <b>matches compatíveis em minutos</b> e reduza o tempo de contratação.<br>
         Para <b>candidatos</b>: encontre vagas que combinam com seu perfil, evolua com trilhas e tenha o apoio <b>Bem+Match</b>.
       </p>
       <div style="display:flex;gap:10px;flex-wrap:wrap">
-        <a class="btn primary" href="#planos-pme">Sou PME</a>
+        <a class="btn primary" href="#planos-empresas">Sou empresa</a>
         <a class="btn ghost" href="#planos-candidato">Sou candidato</a>
       </div>
     </div>
@@ -200,9 +200,9 @@ h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin
     <p class="sub">Escolha o formato ideal para começar agora.</p>
 
     <div class="pricing">
-      <!-- PMEs -->
-      <div id="planos-pme" class="price-card">
-        <div class="price-title"><h3 style="margin:0">PMEs</h3></div>
+      <!-- Empresas -->
+      <div id="planos-empresas" class="price-card">
+        <div class="price-title"><h3 style="margin:0">Empresas</h3></div>
         <div class="price"><span class="amount">R$150</span><span class="small">/mês</span></div>
         <p class="subprice">ou <b>R$1.500/ano</b> (ganhe 2 meses)</p>
         <div class="li">Publicações ilimitadas</div>
@@ -231,7 +231,7 @@ h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin
 
       <!-- One-Shot -->
       <div class="price-card" style="grid-column:1/-1">
-        <div class="price-title"><h3 style="margin:0">PMEs — One-Shot</h3></div>
+        <div class="price-title"><h3 style="margin:0">Empresas — One-Shot</h3></div>
         <div class="price"><span class="amount">R$400</span><span class="small">/vaga</span></div>
         <p class="subprice">Vaga ativa até preencher (<b>máx. 3 meses</b>) + indicações automáticas de compatíveis.</p>
         <a class="btn primary" href="#contato">Publicar vaga única</a>
@@ -265,7 +265,7 @@ h1{font-size:clamp(28px, 6vw, 52px);line-height:1.06;letter-spacing:-.4px;margin
       <input class="input" type="email" name="email" placeholder="E-mail" required aria-label="Seu e-mail">
       <select class="input" name="perfil" required aria-label="Seu perfil">
         <option value="" disabled selected>Sou...</option>
-        <option value="pme">PME</option>
+        <option value="empresa">Empresa</option>
         <option value="candidato">Candidato</option>
         <option value="organizacao">Organização/Parceria</option>
       </select>
